--- a/Views/CadastroCafes/Index.cshtml
+++ b/Views/CadastroCafes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Cadastro";
 }
 
-<h1>Cadastro</h1>
+<h1>Solicitar Reserva</h1>
 
 <p>
     <a class="btn btn-primary btn-lg" asp-action="Create">Novo Cadastro</a>
